--- a/frontend/src/app/home/home.html
+++ b/frontend/src/app/home/home.html
@@ -1,6 +1,7 @@
 <div class="home-container">
 
   <header class="home-header">
+    <h1 class="app-name">Stargazer</h1>
     <button class="menu-btn">
       <span class="bar"></span>
       <span class="bar"></span>
@@ -8,25 +9,32 @@
     </button>
   </header>
 
-  <main class="home-content">
+  <div class="hero-section">
+    <img src="assets/Andromeda.jpg" alt="Nebulosa" class="hero-image">
     <div class="search-container">
       <input type="text" class="search-bar" placeholder="Buscar mapas...">
       <i class="search-icon"></i>
     </div>
+  </div>
 
+  <main class="home-content">
     <div class="carousel-container">
-      <div class="carousel-track">
-        <div
-          *ngFor="let item of carouselItems"
-          class="carousel-item"
-          (click)="selectItem(item)"
-          [class.active]="item === selectedItem">
+      <div class="carousel-track-wrapper">
+        <button class="carousel-arrow prev">&lt;</button>
+        <div class="carousel-track">
+          <div
+            *ngFor="let item of carouselItems"
+            class="carousel-item"
+            (click)="selectItem(item)"
+            [class.active]="item === selectedItem">
 
-          <div class="item-circle">
-            <img *ngIf="item.imageUrl" [src]="item.imageUrl" [alt]="item.name">
+            <div class="item-circle">
+              <img *ngIf="item.imageUrl" [src]="item.imageUrl" [alt]="item.name">
+            </div>
+            <p>{{ item.name }}</p>
           </div>
-          <p>{{ item.name }}</p>
         </div>
+        <button class="carousel-arrow next">&gt;</button>
       </div>
     </div>
 
@@ -35,6 +43,5 @@
       <p>{{ selectedItem.info.description }}</p>
       <button class="cta-button" [routerLink]="selectedItem.route">Explorar Mapa</button>
     </section>
-
   </main>
 </div>
